# telecom-churn-uplift-modeling

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: DATASET.md
notebooks/: 01_eda_uplift_modeling.ipynb
reports/: final_report.md
reports/metrics/: feature_importance.csv  model_comparison.csv  results.json
src/: __init__.py  config.py  data_preprocessing.py  download_data.py  evaluation.py  models.py  predict.py  reporting.py  train.py  uplift_metrics.py  utils.py
tests/: test_data_preprocessing.py  test_models.py  test_uplift_metrics.py
