[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "telecom-churn-prediction"
version = "1.0.0"
description = "Leakage-safe telecom customer churn prediction project"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

